# ai-platform

./: .gitignore  README.md  pyproject.toml
app/: exceptions.py  main.py
app/commands/: analyze.py  ask.py  find.py  inbox.py  ingest.py  open.py
app/core/: config.py  document_versioning.py  logger.py  text.py
app/models/: ask_response.py  document_analysis.py  ingest_result.py  outlook_message.py  session_state.py
app/prompts/: analyze.py  ask.py
app/services/: analyze_service.py  context_builder.py  document_loader.py  exchange_service.py  file_scanner.py  index_writer.py  ingest_service.py  ingest_state.py  open_service.py  openai_service.py  rag_service.py  search_service.py  session_store.py  text_extractor.py
config/: .env.example  exchange_autodiscover.json  ingest_state.json  session.json
scripts/: ai  install.sh
tests/: test_analyze_command.py  test_analyze_prompts.py  test_analyze_service.py  test_ask_command.py  test_cli.py  test_config.py  test_context_builder.py  test_document_loader.py  test_document_versioning.py  test_exchange_service.py  test_file_scanner.py  test_find_command.py  test_inbox_command.py  test_index_writer.py  test_ingest_command.py  test_ingest_service.py  test_ingest_state.py  test_launcher.py  test_open_command.py  test_open_integration.py  test_open_service.py  test_openai_ask.py  test_openai_service.py  test_rag_retrieval.py  test_rag_service.py  test_search_service.py  test_text.py
