[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-platform"
version = "0.1.0"
description = "Production-ready AI platform CLI"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "rich>=13.9",
    "loguru>=0.7",
    "openai>=1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "black>=25.1",
]

[project.scripts]
ai = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
